--- a/gimnasio/gimnasio/.env
+++ b/gimnasio/gimnasio/.env
@@ -1,10 +1,10 @@
 SECRET_KEY=django-insecure-odfm!g7!bw@%)8rs)$sm--(app$vlv7&rkk6ar4vdfo233$u=^
 DEBUG=True
 
-DB_NAME=gym_db
-DB_USER=user_admin
-DB_PASSWORD=Andres911976
-DB_HOST=localhost
+DB_NAME=entrenamiento
+DB_USER=entrenapro2
+DB_PASSWORD=andres911976
+DB_HOST=entrenapro2.mysql.pythonanywhere-services.com
 DB_PORT=3306
 
 EMAIL_HOST=smtp.gmail.com
