--- a/gimnasio/gimnasio/.env
+++ b/gimnasio/gimnasio/.env
@@ -2,7 +2,7 @@ SECRET_KEY=django-insecure-odfm!g7!bw@%)8rs)$sm--(app$vlv7&rkk6ar4vdfo233$u=^
 DEBUG=True
 
 DB_NAME=entrenamiento
-DB_USER=entrenapro2
+DB_USER=entrenamiento2$predeterminado
 DB_PASSWORD=andres911976
 DB_HOST=entrenapro2.mysql.pythonanywhere-services.com
 DB_PORT=3306
