Ajustes de configuración para la base de datos y otros cambios locales

--- a/gimnasio/gimnasio/.env
+++ b/gimnasio/gimnasio/.env
@@ -1,8 +1,8 @@
 SECRET_KEY=django-insecure-odfm!g7!bw@%)8rs)$sm--(app$vlv7&rkk6ar4vdfo233$u=^
 DEBUG=True
 
-DB_NAME=entrenamiento
-DB_USER=entrenamiento2$predeterminado
+DB_NAME=entrenamiento2$predeterminado
+DB_USER=entrenapro2
 DB_PASSWORD=andres911976
 DB_HOST=entrenapro2.mysql.pythonanywhere-services.com
 DB_PORT=3306
@@ -11,7 +11,7 @@ EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_USE_TLS=True
 EMAIL_HOST_USER=andremati91@gmail.com
-EMAIL_HOST_PASSWORD=lxno rhqi rlvj gtwq
+EMAIL_HOST_PASSWORD="lxno rhqi rlvj gtwq"
 DEFAULT_FROM_EMAIL=andremati91@gmail.com
 CONTACT_EMAIL=andremati91@gmail.com
 EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
