cambios para deploy sencillo

--- a/gimnasio/.env
+++ b/gimnasio/.env
@@ -1,5 +1,5 @@
 SECRET_KEY=django-insecure-odfm!g7!bw@%)8rs)$sm--(app$vlv7&rkk6ar4vdfo233$u=^
-DEBUG=True
+DEBUG=False
 
 DB_NAME=entrenapro2$default
 DB_USER=entrenapro2
