--- a/gimnasio/.env
+++ b/gimnasio/.env
@@ -1,12 +1,11 @@
 SECRET_KEY=django-insecure-odfm!g7!bw@%)8rs)$sm--(app$vlv7&rkk6ar4vdfo233$u=^
 DEBUG=False
 
-DB_NAME=entrenapro2$default
-DB_USER=entrenapro2
-DB_PASSWORD=andres911976
-DB_HOST=entrenapro2.mysql.pythonanywhere-services.com
+DB_NAME=entrenaprochapin$default
+DB_USER=entrenaprochapin
+DB_PASSWORD=andres2121
+DB_HOST=entrenaprochapinero.mysql.pythonanywhere-services.com
 DB_PORT=3306
-
 
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
